--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="hero-slider__content">
                   <h2 class="hero-slider__title">THE OOH NOO COLLECTION</h2>
                   <p class="hero-slider__subtitle">Designed in Slovenia</p>
-                  <a href="#" class="button slider-button__explore">Explore Now</a>
+                  <a href="#" class="button slider-button__explore slider-button__explore_js">Explore Now</a>
                 </div>
                 <div class="hero-slider__item-thumb">
                   <img src="images/poster.png" class="poster" alt="oh no collection">
@@ -211,7 +211,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-window__bg">
+    <div class="modal-window__bg modal-window_js modal-window_close">
       <form class="modal-window" action="https://form-data-dl.herokuapp.com/api/messages" method="POST">
         <label class="label">
           <input type="text" class="modal-window__input label-input__name" name="name">
@@ -238,7 +238,7 @@
         <button class="button modal-window__button" type="submit">
           Submit
         </button>
-        <button type="button" class="form-close">+</button>
+        <button type="button" class="form-close form-close_js">+</button>
       </form>
     </div>
     <script src="script.js"></script>
