--- a/pages/category-products/index.html
+++ b/pages/category-products/index.html
@@ -33,41 +33,35 @@
           <li class="breadcrumbs-item"><a href="../../index.html" class="breadcrumbs-link">Home</a></li>
           <li class="breadcrumb breadcrumbs-item">Catalog</li>
         </ul>
-        <ul class="category-list">
-          <li>
-            <a href="#" class="category-products">
-              <img src="../../images/product-1.jpg" alt="Apparel kids"/>
-              APPAREL KIDS
+        <ul class="category-products__list">
+          <li class="category-list__item category-product__bg-apparel" style="background-image: url(../../images/product-1.png)">
+            <a href="#" class="category-products__link" >
+              <span class="category-products__text">APPAREL KIDS</span>
             </a>
           </li>
-          <li>
-            <a href="#" class="category-products">
-              <img src="../../images/product-2.jpg" alt="Holiday shop"/>
-              HOLIDAY SHOP
+          <li class="category-list__item category-product__bg-holiday" style="background-image: url(../../images/product-2.png)">
+            <a href="#" class="category-products__link">
+              <span class="category-products__text">HOLIDAY SHOP</span>
             </a>
           </li>
-          <li>
-            <a href="../toys-for-kids/index.html" class="category-products">
-              <img src="../../images/product-3.jpg" alt="Toys"/>
-              TOYS
+          <li class="category-list__item category-product__bg-toys" style="background-image: url(../../images/product-3.png)">
+            <a href="../toys-for-kids/index.html" class="category-products__link">
+              <span class="category-products__text">TOYS</span>
             </a>
           </li>
-          <li>
-            <a href="#" class="category-products">
-              <img src="../../images/product-4.jpg" alt="Accessories"/>
-              ACCESSORIES
+          <li class="category-list__item category-product__bg-accessories" style="background-image: url(../../images/product-4.png)">
+            <a href="#" class="category-products__link">
+              <span class="category-products__text">ACCESSORIES</span>
             </a>
           </li>
-          <li>
-            <a href="#" class="category-products">
-              <img src="../../images/product-5.jpg" alt="Sale"/>
-              SALE
+          <li class="category-list__item category-product__bg-sale" style="background-image: url(../../images/product-5.png)">
+            <a href="#" class="category-products__link">
+              <span class="category-products__text">SALE</span>
             </a>
           </li>
-          <li>
-            <a href="#" class="category-products">
-              <img src="../../images/product-6.jpg" alt="Apparel adults"/>
-              APPAREL ADULTS
+          <li class="category-list__item category-product__bg-adults" style="background-image: url(../../images/product-6.png)">
+            <a href="#" class="category-products__link">
+              <span class="category-products__text">APPAREL ADULTS</span>
             </a>
           </li>
         </ul>
@@ -92,60 +86,60 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="footer-wrapper container">
-        <div class="footer-section">
-          <h2 class="footer-title">Navigation</h2>
-          <ul class="navigation-list">
-            <li><a href="#" class="footer-links">About Us</a></li>
-            <li><a href="#" class="footer-links">Blog</a></li>
-            <li><a href="#" class="footer-links">Design Services</a></li>
-            <li><a href="#" class="footer-links">Featured On</a></li>
-            <li><a href="#" class="footer-links">2018 Holiday Catalog</a></li>
-            <li><a href="#" class="footer-links">Shop By Designer</a></li>
-          </ul>
-          <div class="rating">
-            <p>Company Rating</p>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-          </div>
-        </div>
-        <div class="footer-section">
-          <h2 class="footer-title">Customer Information</h2>
-          <ul class="customer-info-list">
-            <li><a href="#" class="footer-links">Contact Us</a></li>
-            <li><a href="#" class="footer-links">Sale Exclusions</a></li>
-            <li><a href="#" class="footer-links">Shipping & Returns</a></li>
-            <li><a href="#" class="footer-links">Terms & Conditions</a></li>
-            <li><a href="#" class="footer-links">Privacy Policy</a></li>
-            <li><a href="#" class="footer-links">Search</a></li>
-          </ul>
-          <p class="copyright">
-            Copyright © 2018 Dlk • Design Life Kids
-          </p>
-        </div>
-        <div class="footer-section">
-          <h2 class="footer-title">Connect</h2>
-          <form class="footer-form">
-            <input type="email" class="footer-input" name="email" placeholder="Email" />
-            <button class="button button-border" type="submit">
-              Join
-            </button>
-          </form>
-          <ul class="social-list">
-            <li><a href="#" class="social-link"><img src="../../images/Facebook.svg" alt="Facebook" /></a></li>
+  <footer class="footer">
+    <div class="footer-wrapper container">
+      <div class="footer-section">
+        <h2 class="footer-title">Navigation</h2>
+        <ul class="navigation-list">
+          <li><a href="#" class="footer-links">About Us</a></li>
+          <li><a href="#" class="footer-links">Blog</a></li>
+          <li><a href="#" class="footer-links">Design Services</a></li>
+          <li><a href="#" class="footer-links">Featured On</a></li>
+          <li><a href="#" class="footer-links">2018 Holiday Catalog</a></li>
+          <li><a href="#" class="footer-links">Shop By Designer</a></li>
+        </ul>
+        <div class="rating">
+          <p class="company-rating">Company Rating</p>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+        </div>        
+      </div>
+      <div class="footer-section">
+        <h2 class="footer-title">Customer Information</h2>
+        <ul class="customer-info-list">
+          <li><a href="#" class="footer-links">Contact Us</a></li>
+          <li><a href="#" class="footer-links">Sale Exclusions</a></li>
+          <li><a href="#" class="footer-links">Shipping & Returns</a></li>
+          <li><a href="#" class="footer-links">Terms & Conditions</a></li>
+          <li><a href="#" class="footer-links">Privacy Policy</a></li>
+          <li><a href="#" class="footer-links">Search</a></li>
+        </ul>
+        <p class="copyright">
+          Copyright © 2018 Dlk • Design Life Kids
+        </p>
+      </div>
+      <div class="footer-section__connect">
+        <h2 class="footer-title">Connect</h2>
+        <form class="footer-form">
+          <input type="email" class="footer-input" name="email" placeholder="Email"/><button class="button footer-btn" type="submit">
+            Join
+          </button>
+        </form>
+        <ul class="social-list">
+          <li><a href="#" class="social-link"><img src="../../images/Facebook.svg" alt="Facebook" /></a></li>
           <li><a href="#" class="social-link"><img src="../../images/Twitter.svg" alt="Twitter" /></a></li>
           <li><a href="#" class="social-link"><img src="../../images/Pinterest.svg" alt="Pinterest" /></a></li>
           <li><a href="#" class="social-link"><img src="../../images/Instagram.svg" alt="Instagram" /></a></li>
-          </ul>
-          <p class="design-company">
-            Web Design — <a href="#">Direct Line Development</a>
-          </p>
-        </div>
+        </ul>
+        <p class="design-company">
+          Web Design — <a href="#">Direct Line Development</a>
+        </p>       
       </div>
-    </footer>
+    </div>
+  </footer>
+    <script src="script.js"></script>
   </body>
 </html>
