--- a/pages/toys-for-kids/index.html
+++ b/pages/toys-for-kids/index.html
@@ -36,169 +36,179 @@
           <li class="breadcrumb breadcrumbs-item">Toys</li>
         </ul>
       </div>
-      <form class="toys-filter form">
-        <div class="container">
-          <fieldset>
-            <legend class="filter-legend">Cost</legend>
-            <label>
-              <input class="filter-range" type="range" name="cost" min="0" max="500">
-            </label>
-          </fieldset>
-          <fieldset>
-            <legend class="filter-legend">Color</legend>
-            <label>
-              <input class="filter-color" type="checkbox" name="color" value="black" checked>
-              Black
-            </label>
-            <label>
-              <input class="filter-color" type="checkbox" name="color" value="blue">
-              Blue
-            </label>
-            <label>
-              <input class="filter-color" type="checkbox" name="color" value="green">
-              Green
-            </label>
-            <label>
-              <input class="filter-color" type="checkbox" name="color" value="white">
-              White
-            </label>
-          </fieldset>
-          <fieldset>
-            <legend class="filter-legend">Delivery</legend>
-            <label>
-              <input class="filter-delivery" type="radio" name="delivery" value="free">Free shipping
-            </label>
-            <label>
-              <input class="filter-delivery" type="radio" name="delivery" value="fast" checked>Fast shipping
-            </label>
-          </fieldset>
-          <fieldset>
-            <legend class="filter-legend">Amount</legend>
-            <label>
-              <input class="filter-amount" type="radio" name="amount" value="0-5" checked>
-              0-5
-            </label>
-            <label>
-              <input class="filter-amount" type="radio" name="amount" value="10-20">
-              10-20
-            </label>
-            <label>
-              <input class="filter-amount" type="radio" name="amount" value="20-50">
-              20-50
-            </label>
-          </fieldset>
-          <button class="button" type="submit">Apply</button>
-        </div>
-      </form>
+        <form class="section-form">
+          <div class="container toys-filter">
+            <fieldset>
+              <legend class="filter-legend">Cost</legend>
+              <label>
+                <input class="filter-range filter-range_js" type="range" name="cost" min="0" max="500" value="100">
+              </label>
+            </fieldset>
+            <fieldset>
+              <legend class="filter-legend">Color</legend>
+              <div class="filter-legend__color">
+                <label class="color-label">
+                  <input class="form-checkbox hidden" type="checkbox" name="color" value="black" checked>
+                  <span class="filter-checkbox"></span>
+                  Black
+                </label>
+                <label class="color-label">
+                  <input class="form-checkbox hidden" type="checkbox" name="color" value="blue">
+                  <span class="filter-checkbox"></span>
+                  Blue
+                </label>
+                <label class="color-label">
+                  <input class="form-checkbox hidden" type="checkbox" name="color" value="green">
+                  <span class="filter-checkbox"></span>
+                  Green
+                </label>
+                <label class="color-label">
+                  <input class="form-checkbox hidden" type="checkbox" name="color" value="white">
+                  <span class="filter-checkbox"></span>
+                  White
+                </label>
+              </div>
+            </fieldset>
+            <fieldset>
+              <legend class="filter-legend">Delivery</legend>
+              <label class="delivery-label">
+                <input class="filter-delivery hidden" type="radio" name="delivery" value="free">
+                <span class="shipping-radio"></span>
+                Free shipping
+              </label>
+              <label class="delivery-label">
+                <input class="filter-delivery hidden" type="radio" name="delivery" value="fast" checked>
+                <span class="shipping-radio"></span>
+                Fast shipping
+              </label>
+            </fieldset>
+            <fieldset>
+              <legend class="filter-legend">Amount</legend>
+              <div class="filter-amount__wrapper">
+                <input class="filter-amount hidden" type="radio" id="amount1" name="amount" value="0-5" checked>
+                <label for="amount1" class="amount-label">0-5</label>
+                <input class="filter-amount hidden" type="radio" id="amount2" name="amount" value="10-20">
+                <label for="amount2" class="amount-label">10-20</label>
+                <input class="filter-amount hidden" type="radio" id="amount3" name="amount" value="20-50">
+                <label for="amount3" class="amount-label">20-50</label>
+              </div>
+            </fieldset>
+            <button class="button filter-button" type="submit">Apply</button>
+          </div>
+        </form>
     </section>
     <section class="toy-slider container">
       <h2 class="hidden">Products display</h2>
-      <article class="toy-slider__card">
-        <a href="#" class="toy-slider__link">
-          <img src="../../images/shark-bag.jpg" alt="SHARKY BEAN BAG CHAIR COVER">
-        </a>
-        <h3 class="card-title"><a href="#">SHARKY BEAN BAG CHAIR COVER</a></h3>
-        <p class="price">$60.00 USD</p>
-      </article>
-      <article class="toy-slider__card">
-        <a href="#" class="toy-slider__link">
-          <img src="../../images/brass.jpg" alt="BRASS DECO FRAMES">
-        </a>
-        <h3 class="card-title"><a href="#">BRASS DECO FRAMES</a></h3>
-        <p class="price">$66.00 USD</p>
-      </article>
-      <article class="toy-slider__card">
-        <a href="#" class="toy-slider__link">
-          <img src="../../images/apron.jpg" alt="CIBO FULL APRON">
-        </a>
-        <h3 class="card-title"><a href="#">CIBO FULL APRON</a></h3>
-        <p class="price">$60.00 USD</p>
-      </article>
-      <article class="toy-slider__card">
-        <a href="#" class="toy-slider__link">
-          <img src="../../images/gumball-machine.jpg" alt="GATCHA GATCHA GUMBALL MACHINE">
-        </a>
-        <h3 class="card-title"><a href="#">GATCHA GATCHA GUMBALL MACHINE</a></h3>
-        <p class="price">$56.00 USD</p>
-      </article>
-      <article class="toy-slider__card">
-        <a href="#" class="toy-slider__link">
-          <img src="../../images/christmas-candle.jpg" alt="CHRISTMAS ADVENT SCENTED CANDLE">
-        </a>
-        <h3 class="card-title"><a href="#">CHRISTMAS ADVENT SCENTED CANDLE</a></h3>
-        <p class="price">$29.00 USD</p>
-      </article>
-      <article class="toy-slider__card">
-        <a href="#" class="toy-slider__link">
-          <img src="../../images/tangle_spinning_tea_light.jpg" alt="TANGLE SPINNING TEA LIGHT">
-        </a>
-        <H3 class="card-title"><a href="#">TANGLE SPINNING TEA LIGHT</a></H3>
-        <p class="price">$56.00 USD</p>
-      </article>
-      <div class="pagination">
-        <a href="#" class="pagination__arrow-left"></a>
-        <a href="#" class="pagination__arrow-right"></a>
-        <a href="#" class="pagination-btn">1</a>
-        <a href="#" class="pagination-btn">2</a>
-        <a href="#" class="pagination-btn">3</a>
-        <a href="#" class="pagination-btn">4</a>
+      <div class="toy-slider__wrapper">
+        <article class="toy-slider__card">
+          <a href="#" class="toy-slider__link">
+            <img src="../../images/shark-bag.jpg" alt="SHARKY BEAN BAG CHAIR COVER">
+          </a>
+          <h3 class="card-title"><a href="#">SHARKY BEAN BAG CHAIR COVER</a></h3>
+          <p class="price">$60.00 USD</p>
+        </article>
+        <article class="toy-slider__card">
+          <a href="#" class="toy-slider__link">
+            <img src="../../images/brass.jpg" alt="BRASS DECO FRAMES">
+          </a>
+          <h3 class="card-title"><a href="#">BRASS DECO FRAMES</a></h3>
+          <p class="price">$66.00 USD</p>
+        </article>
+        <article class="toy-slider__card">
+          <a href="#" class="toy-slider__link">
+            <img src="../../images/apron.jpg" alt="CIBO FULL APRON">
+          </a>
+          <h3 class="card-title"><a href="#">CIBO FULL APRON</a></h3>
+          <p class="price">$60.00 USD</p>
+        </article>
+        <article class="toy-slider__card">
+          <a href="#" class="toy-slider__link">
+            <img src="../../images/gumball-machine.jpg" alt="GATCHA GATCHA GUMBALL MACHINE">
+          </a>
+          <h3 class="card-title"><a href="#">GATCHA GATCHA GUMBALL MACHINE</a></h3>
+          <p class="price">$56.00 USD</p>
+        </article>
+        <article class="toy-slider__card">
+          <a href="#" class="toy-slider__link">
+            <img src="../../images/christmas-candle.jpg" alt="CHRISTMAS ADVENT SCENTED CANDLE">
+          </a>
+          <h3 class="card-title"><a href="#">CHRISTMAS ADVENT SCENTED CANDLE</a></h3>
+          <p class="price">$29.00 USD</p>
+        </article>
+        <article class="toy-slider__card">
+          <a href="#" class="toy-slider__link">
+            <img src="../../images/tangle_spinning_tea_light.jpg" alt="TANGLE SPINNING TEA LIGHT">
+          </a>
+          <H3 class="card-title"><a href="#">TANGLE SPINNING TEA LIGHT</a></H3>
+          <p class="price">$56.00 USD</p>
+        </article>
+      </div>
+      <div class="pagination-section">
+        <a href="#" class="pagination__btn-left"></a>
+        <div class="pagination">
+          <a href="#" class="pagination-btn">1</a>
+          <a href="#" class="pagination-btn">2</a>
+          <a href="#" class="pagination-btn">3</a>
+          <a href="#" class="pagination-btn">4</a>
+        </div>
+        <a href="#" class="pagination__btn-right"></a>
       </div>
     </section>
     </main>
     <footer class="footer">
-      <div class="footer-wrapper container">
-        <div class="footer-section">
-          <h2 class="footer-title">Navigation</h2>
-          <ul class="navigation-list">
-            <li><a href="#" class="footer-links">About Us</a></li>
-            <li><a href="#" class="footer-links">Blog</a></li>
-            <li><a href="#" class="footer-links">Design Services</a></li>
-            <li><a href="#" class="footer-links">Featured On</a></li>
-            <li><a href="#" class="footer-links">2018 Holiday Catalog</a></li>
-            <li><a href="#" class="footer-links">Shop By Designer</a></li>
-          </ul>
-          <div class="rating">
-            <p>Company Rating</p>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-            <span class="star">&#9733;</span>
-          </div>
-        </div>
-        <div class="footer-section">
-          <h2 class="footer-title">Customer Information</h2>
-          <ul class="customer-info-list">
-            <li><a href="#" class="footer-links">Contact Us</a></li>
-            <li><a href="#" class="footer-links">Sale Exclusions</a></li>
-            <li><a href="#" class="footer-links">Shipping & Returns</a></li>
-            <li><a href="#" class="footer-links">Terms & Conditions</a></li>
-            <li><a href="#" class="footer-links">Privacy Policy</a></li>
-            <li><a href="#" class="footer-links">Search</a></li>
-          </ul>
-          <p class="copyright">
-            Copyright © 2018 Dlk • Design Life Kids
-          </p>
-        </div>
-        <div class="footer-section">
-          <h2 class="footer-title">Connect</h2>
-          <form class="footer-form">
-            <input type="email" class="footer-input" name="email" placeholder="Email" />
-            <button class="button button-border" type="submit">
-              Join
-            </button>
-          </form>
-          <ul class="social-list">
-            <li><a href="#" class="social-link"><img src="../../images/Facebook.svg" alt="Facebook" /></a></li>
-            <li><a href="#" class="social-link"><img src="../../images/Twitter.svg" alt="Twitter" /></a></li>
-            <li><a href="#" class="social-link"><img src="../../images/Pinterest.svg" alt="Pinterest" /></a></li>
-            <li><a href="#" class="social-link"><img src="../../images/Instagram.svg" alt="Instagram" /></a></li>
-          </ul>
-          <p class="design-company">
-            Web Design — <a href="#">Direct Line Development</a>
-          </p>
-        </div>
+    <div class="footer-wrapper container">
+      <div class="footer-section">
+        <h2 class="footer-title">Navigation</h2>
+        <ul class="navigation-list">
+          <li><a href="#" class="footer-links">About Us</a></li>
+          <li><a href="#" class="footer-links">Blog</a></li>
+          <li><a href="#" class="footer-links">Design Services</a></li>
+          <li><a href="#" class="footer-links">Featured On</a></li>
+          <li><a href="#" class="footer-links">2018 Holiday Catalog</a></li>
+          <li><a href="#" class="footer-links">Shop By Designer</a></li>
+        </ul>
+        <div class="rating">
+          <p class="company-rating">Company Rating</p>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+          <span class="star">&#9733;</span>
+        </div>        
       </div>
-    </footer>
+      <div class="footer-section">
+        <h2 class="footer-title">Customer Information</h2>
+        <ul class="customer-info-list">
+          <li><a href="#" class="footer-links">Contact Us</a></li>
+          <li><a href="#" class="footer-links">Sale Exclusions</a></li>
+          <li><a href="#" class="footer-links">Shipping & Returns</a></li>
+          <li><a href="#" class="footer-links">Terms & Conditions</a></li>
+          <li><a href="#" class="footer-links">Privacy Policy</a></li>
+          <li><a href="#" class="footer-links">Search</a></li>
+        </ul>
+        <p class="copyright">
+          Copyright © 2018 Dlk • Design Life Kids
+        </p>
+      </div>
+      <div class="footer-section__connect">
+        <h2 class="footer-title">Connect</h2>
+        <form class="footer-form">
+          <input type="email" class="footer-input" name="email" placeholder="Email"/><button class="button footer-btn" type="submit">
+            Join
+          </button>
+        </form>
+        <ul class="social-list">
+          <li><a href="#" class="social-link"><img src="../../images/Facebook.svg" alt="Facebook" /></a></li>
+          <li><a href="#" class="social-link"><img src="../../images/Twitter.svg" alt="Twitter" /></a></li>
+          <li><a href="#" class="social-link"><img src="../../images/Pinterest.svg" alt="Pinterest" /></a></li>
+          <li><a href="#" class="social-link"><img src="../../images/Instagram.svg" alt="Instagram" /></a></li>
+        </ul>
+        <p class="design-company">
+          Web Design — <a href="#">Direct Line Development</a>
+        </p>       
+      </div>
+    </div>
+  </footer>
+  <script src="script.js"></script>
   </body>
 </html>
