some hover and active states

--- a/pages/contact-us/index.html
+++ b/pages/contact-us/index.html
@@ -20,7 +20,7 @@
         <li><a href="#" class="nav-link">About us</a></li>
       </ul>
       <ul class="header-nav__contacts">
-        <li><a href="#" class="search"><img src="../../images/search.svg" alt="search"/></a></li>
+        <li><a href="#" class="header-nav__search"><img src="../../images/search.svg" alt="search"/></a></li>
         <li><a href="#" class="contact-link">Contact us</a></li>
       </ul>
     </nav>
