--- a/pages/toys-for-kids/index.html
+++ b/pages/toys-for-kids/index.html
@@ -21,7 +21,7 @@
           <li><a href="#" class="nav-link">About us</a></li>
         </ul>
         <ul class="header-nav__contacts">
-          <li><a href="#" class="search"><img src="../../images/search.svg" alt="search"/></a></li>
+          <li><a href="#" class="header-nav__search"><img src="../../images/search.svg" alt="search"/></a></li>
           <li><a href="../contact-us/index.html" class="contact-link">Contact us</a></li>
         </ul>
       </nav>
@@ -50,22 +50,22 @@
                 <label class="color-label">
                   <input class="form-checkbox hidden" type="checkbox" name="color" value="black" checked>
                   <span class="filter-checkbox"></span>
-                  Black
+                   <span class="input__text">Black</span> 
                 </label>
                 <label class="color-label">
                   <input class="form-checkbox hidden" type="checkbox" name="color" value="blue">
                   <span class="filter-checkbox"></span>
-                  Blue
+                  <span class="input__text">Blue</span>
                 </label>
                 <label class="color-label">
                   <input class="form-checkbox hidden" type="checkbox" name="color" value="green">
                   <span class="filter-checkbox"></span>
-                  Green
+                  <span class="input__text">Green</span>
                 </label>
                 <label class="color-label">
                   <input class="form-checkbox hidden" type="checkbox" name="color" value="white">
                   <span class="filter-checkbox"></span>
-                  White
+                  <span class="input__text">White</span>
                 </label>
               </div>
             </fieldset>
@@ -74,12 +74,12 @@
               <label class="delivery-label">
                 <input class="filter-delivery hidden" type="radio" name="delivery" value="free">
                 <span class="shipping-radio"></span>
-                Free shipping
+                <span class="input__text">Free shipping</span>
               </label>
               <label class="delivery-label">
                 <input class="filter-delivery hidden" type="radio" name="delivery" value="fast" checked>
                 <span class="shipping-radio"></span>
-                Fast shipping
+                <span class="input__text">Fast shipping</span>
               </label>
             </fieldset>
             <fieldset>
@@ -101,6 +101,9 @@
       <h2 class="hidden">Products display</h2>
       <div class="toy-slider__wrapper">
         <article class="toy-slider__card">
+          <div class="toy-slider__overlay">
+            <a class="overlay-link" href="">Learn more</a>
+          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/shark-bag.jpg" alt="SHARKY BEAN BAG CHAIR COVER">
           </a>
@@ -108,6 +111,9 @@
           <p class="price">$60.00 USD</p>
         </article>
         <article class="toy-slider__card">
+          <div class="toy-slider__overlay">
+            <a class="overlay-link" href="">Learn more</a>
+          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/brass.jpg" alt="BRASS DECO FRAMES">
           </a>
@@ -115,6 +121,9 @@
           <p class="price">$66.00 USD</p>
         </article>
         <article class="toy-slider__card">
+          <div class="toy-slider__overlay">
+            <a class="overlay-link" href="">Learn more</a>
+          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/apron.jpg" alt="CIBO FULL APRON">
           </a>
@@ -122,6 +131,9 @@
           <p class="price">$60.00 USD</p>
         </article>
         <article class="toy-slider__card">
+          <div class="toy-slider__overlay">
+            <a class="overlay-link" href="">Learn more</a>
+          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/gumball-machine.jpg" alt="GATCHA GATCHA GUMBALL MACHINE">
           </a>
@@ -129,6 +141,9 @@
           <p class="price">$56.00 USD</p>
         </article>
         <article class="toy-slider__card">
+          <div class="toy-slider__overlay">
+            <a class="overlay-link" href="">Learn more</a>
+          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/christmas-candle.jpg" alt="CHRISTMAS ADVENT SCENTED CANDLE">
           </a>
@@ -136,6 +151,9 @@
           <p class="price">$29.00 USD</p>
         </article>
         <article class="toy-slider__card">
+          <div class="toy-slider__overlay">
+            <a class="overlay-link" href="">Learn more</a>
+          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/tangle_spinning_tea_light.jpg" alt="TANGLE SPINNING TEA LIGHT">
           </a>
