--- a/pages/toys-for-kids/index.html
+++ b/pages/toys-for-kids/index.html
@@ -50,7 +50,7 @@
                 <label class="color-label">
                   <input class="form-checkbox hidden" type="checkbox" name="color" value="black" checked>
                   <span class="filter-checkbox"></span>
-                   <span class="input__text">Black</span> 
+                  <span class="input__text">Black</span> 
                 </label>
                 <label class="color-label">
                   <input class="form-checkbox hidden" type="checkbox" name="color" value="blue">
@@ -101,61 +101,49 @@
       <h2 class="hidden">Products display</h2>
       <div class="toy-slider__wrapper">
         <article class="toy-slider__card">
-          <div class="toy-slider__overlay">
-            <a class="overlay-link" href="">Learn more</a>
-          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/shark-bag.jpg" alt="SHARKY BEAN BAG CHAIR COVER">
+            <div class="toy-slider__overlay">Learn More</div>
           </a>
           <h3 class="card-title"><a href="#">SHARKY BEAN BAG CHAIR COVER</a></h3>
           <p class="price">$60.00 USD</p>
         </article>
         <article class="toy-slider__card">
-          <div class="toy-slider__overlay">
-            <a class="overlay-link" href="">Learn more</a>
-          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/brass.jpg" alt="BRASS DECO FRAMES">
+            <div class="toy-slider__overlay">Learn More</div>
           </a>
           <h3 class="card-title"><a href="#">BRASS DECO FRAMES</a></h3>
           <p class="price">$66.00 USD</p>
         </article>
         <article class="toy-slider__card">
-          <div class="toy-slider__overlay">
-            <a class="overlay-link" href="">Learn more</a>
-          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/apron.jpg" alt="CIBO FULL APRON">
+            <div class="toy-slider__overlay">Learn More</div>
           </a>
           <h3 class="card-title"><a href="#">CIBO FULL APRON</a></h3>
           <p class="price">$60.00 USD</p>
         </article>
         <article class="toy-slider__card">
-          <div class="toy-slider__overlay">
-            <a class="overlay-link" href="">Learn more</a>
-          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/gumball-machine.jpg" alt="GATCHA GATCHA GUMBALL MACHINE">
+            <div class="toy-slider__overlay">Learn More</div>
           </a>
           <h3 class="card-title"><a href="#">GATCHA GATCHA GUMBALL MACHINE</a></h3>
           <p class="price">$56.00 USD</p>
         </article>
         <article class="toy-slider__card">
-          <div class="toy-slider__overlay">
-            <a class="overlay-link" href="">Learn more</a>
-          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/christmas-candle.jpg" alt="CHRISTMAS ADVENT SCENTED CANDLE">
+            <div class="toy-slider__overlay">Learn More</div>
           </a>
           <h3 class="card-title"><a href="#">CHRISTMAS ADVENT SCENTED CANDLE</a></h3>
           <p class="price">$29.00 USD</p>
         </article>
         <article class="toy-slider__card">
-          <div class="toy-slider__overlay">
-            <a class="overlay-link" href="">Learn more</a>
-          </div>
           <a href="#" class="toy-slider__link">
             <img src="../../images/tangle_spinning_tea_light.jpg" alt="TANGLE SPINNING TEA LIGHT">
+            <div class="toy-slider__overlay">Learn More</div>
           </a>
           <H3 class="card-title"><a href="#">TANGLE SPINNING TEA LIGHT</a></H3>
           <p class="price">$56.00 USD</p>
@@ -174,59 +162,59 @@
     </section>
     </main>
     <footer class="footer">
-    <div class="footer-wrapper container">
-      <div class="footer-section">
-        <h2 class="footer-title">Navigation</h2>
-        <ul class="navigation-list">
-          <li><a href="#" class="footer-links">About Us</a></li>
-          <li><a href="#" class="footer-links">Blog</a></li>
-          <li><a href="#" class="footer-links">Design Services</a></li>
-          <li><a href="#" class="footer-links">Featured On</a></li>
-          <li><a href="#" class="footer-links">2018 Holiday Catalog</a></li>
-          <li><a href="#" class="footer-links">Shop By Designer</a></li>
-        </ul>
-        <div class="rating">
-          <p class="company-rating">Company Rating</p>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-        </div>        
+      <div class="footer-wrapper container">
+        <div class="footer-section">
+          <h2 class="footer-title">Navigation</h2>
+          <ul class="navigation-list">
+            <li><a href="#" class="footer-links">About Us</a></li>
+            <li><a href="#" class="footer-links">Blog</a></li>
+            <li><a href="#" class="footer-links">Design Services</a></li>
+            <li><a href="#" class="footer-links">Featured On</a></li>
+            <li><a href="#" class="footer-links">2018 Holiday Catalog</a></li>
+            <li><a href="#" class="footer-links">Shop By Designer</a></li>
+          </ul>
+          <div class="rating">
+            <p class="company-rating">Company Rating</p>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+          </div>        
+        </div>
+        <div class="footer-section">
+          <h2 class="footer-title">Customer Information</h2>
+          <ul class="customer-info-list">
+            <li><a href="#" class="footer-links">Contact Us</a></li>
+            <li><a href="#" class="footer-links">Sale Exclusions</a></li>
+            <li><a href="#" class="footer-links">Shipping & Returns</a></li>
+            <li><a href="#" class="footer-links">Terms & Conditions</a></li>
+            <li><a href="#" class="footer-links">Privacy Policy</a></li>
+            <li><a href="#" class="footer-links">Search</a></li>
+          </ul>
+          <p class="copyright">
+            Copyright © 2018 Dlk • Design Life Kids
+          </p>
+        </div>
+        <div class="footer-section__connect">
+          <h2 class="footer-title">Connect</h2>
+          <form class="footer-form">
+            <input type="email" class="footer-input" name="email" placeholder="Email"/><button class="button footer-btn" type="submit">
+              Join
+            </button>
+          </form>
+          <ul class="social-list">
+            <li><a href="#" class="social-link"><img src="../../images/Facebook.svg" alt="Facebook" /></a></li>
+            <li><a href="#" class="social-link"><img src="../../images/Twitter.svg" alt="Twitter" /></a></li>
+            <li><a href="#" class="social-link"><img src="../../images/Pinterest.svg" alt="Pinterest" /></a></li>
+            <li><a href="#" class="social-link"><img src="../../images/Instagram.svg" alt="Instagram" /></a></li>
+          </ul>
+          <p>
+            <a href="#" class="design-company">Web Design — Direct Line Development</a>
+          </p>       
+        </div>
       </div>
-      <div class="footer-section">
-        <h2 class="footer-title">Customer Information</h2>
-        <ul class="customer-info-list">
-          <li><a href="#" class="footer-links">Contact Us</a></li>
-          <li><a href="#" class="footer-links">Sale Exclusions</a></li>
-          <li><a href="#" class="footer-links">Shipping & Returns</a></li>
-          <li><a href="#" class="footer-links">Terms & Conditions</a></li>
-          <li><a href="#" class="footer-links">Privacy Policy</a></li>
-          <li><a href="#" class="footer-links">Search</a></li>
-        </ul>
-        <p class="copyright">
-          Copyright © 2018 Dlk • Design Life Kids
-        </p>
-      </div>
-      <div class="footer-section__connect">
-        <h2 class="footer-title">Connect</h2>
-        <form class="footer-form">
-          <input type="email" class="footer-input" name="email" placeholder="Email"/><button class="button footer-btn" type="submit">
-            Join
-          </button>
-        </form>
-        <ul class="social-list">
-          <li><a href="#" class="social-link"><img src="../../images/Facebook.svg" alt="Facebook" /></a></li>
-          <li><a href="#" class="social-link"><img src="../../images/Twitter.svg" alt="Twitter" /></a></li>
-          <li><a href="#" class="social-link"><img src="../../images/Pinterest.svg" alt="Pinterest" /></a></li>
-          <li><a href="#" class="social-link"><img src="../../images/Instagram.svg" alt="Instagram" /></a></li>
-        </ul>
-        <p class="design-company">
-          Web Design — <a href="#">Direct Line Development</a>
-        </p>       
-      </div>
-    </div>
-  </footer>
+    </footer>
   <script src="script.js"></script>
   </body>
 </html>
