--- a/pages/category-products/index.html
+++ b/pages/category-products/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <section class="products container">
-        <h1 class="section-title">Category Products</h1>
+        <h1 class="section-title category-title">Category Products</h1>
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item"><a href="../../index.html" class="breadcrumbs-link">Home</a></li>
           <li class="breadcrumb breadcrumbs-item">Catalog</li>
@@ -66,7 +66,7 @@
           </li>
         </ul>
         <div class="products-description">
-          <h2 class="block-title">Product Description</h2>
+          <h2 class="block-title block-title__description">Product Description</h2>
           <p class="products-description__text">
             Interactive doll Zapf Creation Baby Born Sister can drink from a
             bottle and almost really cry. You can even bathe her, just like a
@@ -86,60 +86,59 @@
         </div>
       </section>
     </main>
-  <footer class="footer">
-    <div class="footer-wrapper container">
-      <div class="footer-section">
-        <h2 class="footer-title">Navigation</h2>
-        <ul class="navigation-list">
-          <li><a href="#" class="footer-links">About Us</a></li>
-          <li><a href="#" class="footer-links">Blog</a></li>
-          <li><a href="#" class="footer-links">Design Services</a></li>
-          <li><a href="#" class="footer-links">Featured On</a></li>
-          <li><a href="#" class="footer-links">2018 Holiday Catalog</a></li>
-          <li><a href="#" class="footer-links">Shop By Designer</a></li>
-        </ul>
-        <div class="rating">
-          <p class="company-rating">Company Rating</p>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
-        </div>        
+    <footer class="footer">
+      <div class="footer-wrapper container">
+        <div class="footer-section">
+          <h2 class="footer-title">Navigation</h2>
+          <ul class="navigation-list">
+            <li><a href="#" class="footer-links">About Us</a></li>
+            <li><a href="#" class="footer-links">Blog</a></li>
+            <li><a href="#" class="footer-links">Design Services</a></li>
+            <li><a href="#" class="footer-links">Featured On</a></li>
+            <li><a href="#" class="footer-links">2018 Holiday Catalog</a></li>
+            <li><a href="#" class="footer-links">Shop By Designer</a></li>
+          </ul>
+          <div class="rating">
+            <p class="company-rating">Company Rating</p>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+            <span class="star">&#9733;</span>
+          </div>        
+        </div>
+        <div class="footer-section">
+          <h2 class="footer-title">Customer Information</h2>
+          <ul class="customer-info-list">
+            <li><a href="#" class="footer-links">Contact Us</a></li>
+            <li><a href="#" class="footer-links">Sale Exclusions</a></li>
+            <li><a href="#" class="footer-links">Shipping & Returns</a></li>
+            <li><a href="#" class="footer-links">Terms & Conditions</a></li>
+            <li><a href="#" class="footer-links">Privacy Policy</a></li>
+            <li><a href="#" class="footer-links">Search</a></li>
+          </ul>
+          <p class="copyright">
+            Copyright © 2018 Dlk • Design Life Kids
+          </p>
+        </div>
+        <div class="footer-section__connect">
+          <h2 class="footer-title">Connect</h2>
+          <form class="footer-form">
+            <input type="email" class="footer-input" name="email" placeholder="Email"/><button class="button footer-btn" type="submit">
+              Join
+            </button>
+          </form>
+          <ul class="social-list">
+            <li><a href="#" class="social-link"><img src="../../images/Facebook.svg" alt="Facebook" /></a></li>
+            <li><a href="#" class="social-link"><img src="../../images/Twitter.svg" alt="Twitter" /></a></li>
+            <li><a href="#" class="social-link"><img src="../../images/Pinterest.svg" alt="Pinterest" /></a></li>
+            <li><a href="#" class="social-link"><img src="../../images/Instagram.svg" alt="Instagram" /></a></li>
+          </ul>
+          <p>
+            <a href="#" class="design-company">Web Design — Direct Line Development</a>
+          </p>       
+        </div>
       </div>
-      <div class="footer-section">
-        <h2 class="footer-title">Customer Information</h2>
-        <ul class="customer-info-list">
-          <li><a href="#" class="footer-links">Contact Us</a></li>
-          <li><a href="#" class="footer-links">Sale Exclusions</a></li>
-          <li><a href="#" class="footer-links">Shipping & Returns</a></li>
-          <li><a href="#" class="footer-links">Terms & Conditions</a></li>
-          <li><a href="#" class="footer-links">Privacy Policy</a></li>
-          <li><a href="#" class="footer-links">Search</a></li>
-        </ul>
-        <p class="copyright">
-          Copyright © 2018 Dlk • Design Life Kids
-        </p>
-      </div>
-      <div class="footer-section__connect">
-        <h2 class="footer-title">Connect</h2>
-        <form class="footer-form">
-          <input type="email" class="footer-input" name="email" placeholder="Email"/><button class="button footer-btn" type="submit">
-            Join
-          </button>
-        </form>
-        <ul class="social-list">
-          <li><a href="#" class="social-link"><img src="../../images/Facebook.svg" alt="Facebook" /></a></li>
-          <li><a href="#" class="social-link"><img src="../../images/Twitter.svg" alt="Twitter" /></a></li>
-          <li><a href="#" class="social-link"><img src="../../images/Pinterest.svg" alt="Pinterest" /></a></li>
-          <li><a href="#" class="social-link"><img src="../../images/Instagram.svg" alt="Instagram" /></a></li>
-        </ul>
-        <p class="design-company">
-          Web Design — <a href="#">Direct Line Development</a>
-        </p>       
-      </div>
-    </div>
-  </footer>
-    <script src="script.js"></script>
+    </footer>
   </body>
 </html>
