--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header class="header container">
-      <a class="header-logo" href="#">
+      <a class="header-logo">
         <img src="images/logo.svg" alt="logo" />
       </a>
       <nav class="header-nav">
